# bugremidi

./: README.md  bug.libremidi.bugremidi.yml
src/: CMakeLists.txt  main.cpp
